--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 // ionclude all your related style here in the footer, you can leave it empty if the page has no footer
-footer { 
-	z-index: 2; 
+footer {
+	z-index: 2;
 	position: relative;
 	background: $coDarkGreen;
 
@@ -16,7 +16,14 @@ footer {
 	}
 }
 
-
+.foot-note {
+	background-color: darken($coGreen, 10%);
+	@include box-shadow(0,5px,40px, rgba(0,0,0,0.2), inset);
+	text-align: center;
+	padding: 15px 0;
+	font-size: 14px;
+	color: #fff;
+}
 
 .get-wingapp {
 	background: $coBlue;
@@ -252,7 +259,7 @@ footer {
 	}
 
 	.col-sm-4 {
-		
+
 		@include breakpoint(tablet) {
 			margin-bottom: 15px;
 			padding-left: 0;
@@ -261,7 +268,7 @@ footer {
 			ul {
 				display: none;
 			}
-		} 
+		}
 
 	}
 }
@@ -324,7 +331,7 @@ footer {
 
 .footer-logo {
 	max-width: 210px;
-	
+
 	@include breakpoint(tablet) {
 		max-width: 170px;
 		margin: 0 auto;
@@ -375,7 +382,7 @@ footer {
 	p {
 		font-weight: 300;
 		padding-bottom: 10px;
-		font-size: 14px; 
+		font-size: 14px;
 	}
 }
 
@@ -415,7 +422,7 @@ footer {
 			    @include transform(rotate(0deg));
 		    }
 		}
-		
+
 		.textwidget {
 			display: none;
 			margin-bottom: 15px;
