--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -109,6 +109,41 @@ strong, b {
 	&.btn-radius1 {
 		border-radius: 12px;
 	}
+
+	&.spec {
+		background-color:  $coDarkBlue;
+		text-transform: capitalize;
+		color: rgba(255,255,255,0.9);
+		border: 0;
+		font-size: 30px;
+		padding: 9px 40px 11px;
+
+		&:hover {
+			background-color:  lighten($coDarkBlue, 10%);
+		}
+	}
+}
+
+.btn-wing-app {
+	color: $coGreen;
+	background-color: #fff;
+	background-image: url('../images/mobile-os.png');
+	background-repeat: no-repeat;
+	background-position: right 20px top 14px;
+	background-size: 90px;
+	display: inline-block;
+	width: 435px;
+	line-height: 1;
+	font-size: 31px;
+	font-weight: 400;
+	padding: 25px 110px 27px 20px;
+	@include border-radius(10px);
+
+	&:hover {
+		background-color: $coGreen;
+		background-image: url('../images/mobile-os-w.png');
+		color: #fff;
+	}
 }
 
 .fonta {
@@ -215,7 +250,7 @@ strong, b {
 		margin-top: 45px;
 
 		&.bg-grey {
-			margin-top: 0px;			
+			margin-top: 0px;
 		}
 	}
 
@@ -327,7 +362,7 @@ strong, b {
 	margin-bottom: 27px;
 	position: relative;
 	overflow: hidden;
-	
+
 	img {
 		width: 100%;
 		height: auto;
@@ -767,11 +802,11 @@ ul.cross {
 					}
 				}
 
-				
+
 			}
 		}
 
-		
+
 	}
 
 	&.col-list-2 {
@@ -816,11 +851,11 @@ ul.cross {
 					}
 				}
 
-				
+
 			}
 		}
 
-		
+
 	}
 
 	&.col-list-4 {
@@ -868,7 +903,7 @@ ul.cross {
 			}
 		}
 
-		
+
 	}
 
 	&.col-list-5 {
@@ -912,7 +947,7 @@ ul.cross {
 			}
 		}
 
-		
+
 	}
 
 	&.col-list-6 {
@@ -964,7 +999,7 @@ ul.cross {
 			}
 		}
 
-		
+
 	}
 }
 
@@ -1052,7 +1087,7 @@ table {
 	width: 100%;
 	border: 1px solid $coLightBlue;
 	box-shadow: 0px 0px 5px rgba($coBlack, 0.1);
-	
+
 
 	th {
 		background: $coBlue;
@@ -1074,7 +1109,7 @@ table {
 		@include breakpoint(tablet2) {
 			/*font-size: 14px;*/
 			padding: 10px 15px;
-		} 
+		}
 	}
 
 	td {
@@ -1085,7 +1120,7 @@ table {
 		@include breakpoint(tablet2) {
 			/*font-size: 12px;*/
 			padding: 6px 10px;
-		} 
+		}
 
 	}
 
@@ -1288,7 +1323,7 @@ ol {
 		margin-top: 0px;
 		padding-top: 0px;
 		margin-bottom: 35px;
-		
+
 	}
 
 	h4 {
@@ -1304,7 +1339,7 @@ ol {
 		}
 	}
 
-	
+
 
 	.input-wrap {
 		margin-bottom: 20px;
@@ -1402,7 +1437,7 @@ img.alignright {
 		float: none;
 		clear: both;
 		margin-left: 0;
-	} 
+	}
 }
 
 img.alignleft {float:left; margin:0 1em 1em 0; max-width: 100%;
@@ -1413,7 +1448,7 @@ img.alignleft {float:left; margin:0 1em 1em 0; max-width: 100%;
 		float: none;
 		clear: both;
 		margin-right: 0;
-	} 
+	}
 }
 img.aligncenter {display: block; margin-left: auto; margin-right: auto; margin-top: 1em; margin-bottom: 1em; max-width: 100%; height: auto;}
 a img.alignright {float:right; margin:0 0 1em 1em; max-width: 100%; height: auto;}
@@ -1421,12 +1456,12 @@ a img.alignleft {float:left; margin:0 1em 1em 0; max-width: 100%; height: auto;}
 a img.aligncenter {display: block; margin-left: auto; margin-right: auto; margin-top: 1em; margin-bottom: 1em; max-width: 100%; height: auto;}
 
 
-.custom-select-wrapper { 
-	display: block; 
-	position: relative; 
-	height: 35px; 
-	background: transparent;  
-	box-sizing: border-box; 
+.custom-select-wrapper {
+	display: block;
+	position: relative;
+	height: 35px;
+	background: transparent;
+	box-sizing: border-box;
 	border: 1px solid $coLightBlue;
 	border-radius: 6px;
 
@@ -1451,30 +1486,30 @@ a img.aligncenter {display: block; margin-left: auto; margin-right: auto; margin
 		border-bottom:1px solid $coYellow;
 	}
 }
-.custom-select-wrapper .custom-select-display { 
-	display: block; 
-	height: 35px; 
-	margin-right: 25px; 
+.custom-select-wrapper .custom-select-display {
+	display: block;
+	height: 35px;
+	margin-right: 25px;
 	color: #333;
 	font-weight: 300;
-	overflow: hidden; 
-	padding: 8px 8px 0px 8px; 
-	white-space: nowrap; 
+	overflow: hidden;
+	padding: 8px 8px 0px 8px;
+	white-space: nowrap;
 	text-overflow: ellipsis;
 	font-size: 14px;
 	font-family: $fontA;
 }
 
-.custom-select-wrapper select { 
-	-webkit-appearance: none; 
-	position: absolute; 
-	top: 0; 
-	left: 0; 
-	width: 100%; 
-	height: 100%; 
-	filter: alpha(opacity=0); 
-	opacity: 0; 
-	z-index: 1; 
+.custom-select-wrapper select {
+	-webkit-appearance: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	filter: alpha(opacity=0);
+	opacity: 0;
+	z-index: 1;
 	cursor: pointer;
 }
 
@@ -1586,4 +1621,37 @@ a img.aligncenter {display: block; margin-left: auto; margin-right: auto; margin
     40% {
         opacity: 1;
     }
+}
+
+.fb-page-like {
+	.fb-frame {
+		position:fixed;
+		width:255px;
+	  height:300px;
+		background-color: #fff;
+		top:235px;
+		left:0px;
+		margin-left: -256px;
+		z-index: 999;
+		padding: 0 5px 0 0;
+		@include border-radius(0 0 7px 0);
+	}
+	.show-hide {
+		position: fixed;
+		width: 160px;
+		height: 42px;
+		left: -61px;
+		padding: 10px;
+		text-align: center;
+		background: #fff;
+		top: 294px;
+		z-index: 999;
+		@include transform(rotate(90deg));
+		@include border-radius(7px 7px 0 0);
+		@include box-shadow(2px,-4px,4px, rgba(0,0,0,0.1));
+
+		img {
+			width: 100px;
+		}
+	}
 }
