--- a/scss/abovefold/_home.scss
+++ b/scss/abovefold/_home.scss
@@ -143,6 +143,12 @@
 		max-height: 100%;
 	}
 
+	video {
+		width: auto;
+		height: auto;
+		min-width: 100%;
+		min-height: 100%;
+	}
 }
 
 .home-slide-item {
